--- a/index.html
+++ b/index.html
@@ -58,43 +58,15 @@
     height="120"/>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="arrow">
-    <img src="images\arrow.png" alt="Google logo"
-    width="65"
-    height="45"/>
-</div>
-
-<br>
-<br>
-<br>
-<br>
+<section id="sec-1">
+    <div class="container">
+        <div class="scroll-down"></div>
+    </div>
+</section>
+<section id="sec-2">
+    <div class="container">
+    </div>
+</section>
 
 <div>
         <img src="images\Me march 12.3.jpg" alt="Google logo"
@@ -105,7 +77,7 @@
 
 <div class="paragraph">
 
-                <div>My name is Cresabel or you can call me Cres! I am currently a freelance user experience designer based in Toronto, Canada. I am passionate about user design as I believe in it’s ability to impact the everday lives of people. 
+                <div>My name is Cresabel De Guzman or you can call me Cres! I am currently a freelance user experience designer based in Toronto, Canada. I am passionate about user design as I believe in it’s ability to impact the everday lives of people. 
                     Before design, I was working in banking. I discovered the world of UX/UI design and fell in love. I completed the UX/UI design of continuing studies at University of Toronto.
                     In my free time, you can find me at the gym, drinking coffee (wine on days off), or gaming. </div>
 
