--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     
     <title>Document</title>
 </head>
@@ -41,7 +42,7 @@
 <br>
 <br>
 
-<div>
+<div id="container1">
     <h1>UX DESIGNER</h1>
 </div>
 
@@ -104,6 +105,8 @@
 <br>
 <br>
 
+
+
 <footer>
     <aside class="footer-left">
         <ul>
@@ -120,11 +123,16 @@
         <ul>
             <li>Hire me?</li>
             <li>Email me at </li>
-            <li>c.dgzmn@hotmail.com</li>
+            <li class="fade">c.dgzmn@hotmail.com</li>
             <br>
             <br>
             <br>
     </aside>
+
+<meta charset="utf-8">
+<title>hover demo</title>
+
+
 
     <aside class="footer-right">
         <li>Connect with me </li>
@@ -145,4 +153,5 @@
     </aside>
 </footer>
 
+<script src="js/index.js"></script>
 </html>
